# Phlow

./: README.md  flow_compare.py  flow_object.py  flow_pipeline.py  pyproject.toml
Phlow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phlow/: __init__.py  cli.py  flow_compare.py  flow_object.py  flow_organize.py  flow_pipeline.py  global_compare.py
