[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Phlow"
version = "0.1.0"
description = "Tools for organizing, analyzing, and comparing flow cytometry .fcs experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "FlowCal",
    "matplotlib",
    "numpy",
    "seaborn",
]

[project.scripts]
phlow = "phlow.cli:main"
Phlow = "phlow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phlow*"]
